2020-01-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: improve ensure-visible

	* src/balsa-index.c (balsa_index_ensure_visible): if either a
	message is selected or has the focus, scroll to it.

2020-01-19  Albrecht Dreß  <albrecht.dress@arcor.de>

	* README: fix package requirements
	* configure.ac, meson.build: require libical >= 3.0.0 (note:
	  not tested for Meson builds)
	* libbalsa/rfc2445.[ch]: mostly re-written, using the libical
	  parser and data types
	* src/balsa-mime-widget-vcalendar.c: add additional event items;
	  use the new rfc2445.h api
	* src/balsa-print-object-text.c: fix two pango test layout memory
	  leaks; add additional event items; use the new rfc2445.h api
	* src/print-gtk.c: fix part selection for printing text/calendar

2020-01-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Simplify managing idle handlers

	* src/balsa-index.c (bndx_destroy): use
	g_source_remove_by_user_data() instead of saving ids;
	(balsa_index_scroll_on_open), (bndx_scroll_on_open_idle),
	(bndx_mailbox_changed_idle), (bndx_queue_draw_idle):
	we do not save the id;
	(bndx_mailbox_row_inserted_cb), (bndx_mailbox_row_inserted_idle):
	store the msgno in the BalsaIndex, instead of allocating a new
	structure;
	(bndx_expand_to_row_and_select), (bndx_expand_to_row_and_select_idle),
	(bndx_update_tree_idle), (balsa_index_update_tree):
	we do not need to add a reference to the BalsaIndex.

2020-01-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Fix the "mostly" part of the previous commit, by
	using yet another idle handler to allow the tree-view's layout
	settle down.

	* src/balsa-index.c (bndx_expand_to_row_and_select_idle): new
	idle handler that scrolls to the desired row;
	(bndx_expand_to_row_and_select): use it, instead of scrolling
	immediately after expanding to the row.

2020-01-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: improve expand and collapse
